# fcpb

./: .gitignore  pyproject.toml
notebooks/: Federated Experiment.ipynb  Fusion bench for FF & ResNet18.ipynb  __GPU_Optimisation_techniques_for_simple_FF_NN_.ipynb  __Optimisation techniques for simple FF NN .ipynb
src/: benchmarking.py  ff.py  resnet.py
